@@ -35,6 +35,7 @@ Features
 - added a dynamic max-lookahead criterion for strong branching. Fits a probability distribution to the observed candidate gains and
   stop evaluating further candidates once the expected tree-size reduction no longer justifies the LP evaluation cost.
 - extended the statistics to also include information about the number of variables (per type) affected by symmetry
+- add check that parameter value pointers are unique, i.e., no two are the same
 
 Performance improvements
 ------------------------
